Add GreenPlusYellow Solver

--- a/graphs.html
+++ b/graphs.html
@@ -22,7 +22,14 @@ var trace2 = {
   type: 'line'
 };
 
-var data = [trace1, trace2];
+var trace3 = {
+  y: [35, 286, 365, 175, 83, 34, 17, 2, 2, 1, 0],
+  x: [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12],
+  name: 'GreenPlusYellow',
+  type: 'line'
+};
+
+var data = [trace1, trace2, trace3];
 
 var layout = {barmode: 'group'};
 
